# asteroids2.0

./: .gitmodules  Cargo.toml  README.md  desc.ron  ideas.md  progress.md  upgrades.ron  waves.ron
.github/workflows/: rust.yml
assets/: out.ron
assets/twenty_assets/: README.md  ai2svg.sh  bar.ai  basic_select.ai  blast.fla  blaster_gun.ai  bomb.ai  bomber.ai  bomberman.ai  bullet.ai  bullet_damage.ai  bullet_speed.ai  chains.ai  chains_dark.ai  charging.ai  circle.ai  coin.ai  cursor.ai  double_coin_ability.ai  double_exp_ability.ai  enemy_bullet.ai  enemy_bullet2.ai  exp.ai  explosion.fla  fire_rate.ai  fish.ai  fog.ai  glow.ai  halfmoon.ai  heavy.ai  heavy_select.ai  hull_upgrade.ai  impact.fla  jupyterish.ai  kamikadzer.ai  lazer_boss.ai  lazer_enemy.ai  lazer_gun.ai  life.ai  light.ai  (+27 more)
assets/twenty_assets/blast2/: renamer.py
assets/twenty_assets/bullet_contact/: renamer.py
assets/twenty_assets/explosion/: renamer.py
common/: Cargo.toml
common/src/: lib.rs
components/: Cargo.toml
components/src/: lib.rs
geometry/: Cargo.toml
geometry/src/: lib.rs
gfx_h/: Cargo.toml
gfx_h/src/: animation.rs  effects.rs  lib.rs  main.rs
gles/: f_.glsl  f_atlas.glsl  f_instancing.glsl  f_light.glsl  f_primitive.glsl  f_primitive_texture.glsl  f_spritebatch.glsl  f_text.glsl  v_.glsl  v_atlas.glsl  v_instancing.glsl  v_light.glsl  v_primitive.glsl  v_primitive_texture.glsl  v_spritebatch.glsl  v_text.glsl
lib/: Cargo.toml
lib/src/: gfx.rs  lib.rs  prelude.rs  types.rs
packer/: Cargo.toml  mimic.ron  out.ron  s
packer/src/: ai2svg.sh  format.rs  lib.rs  main.rs
packer/texture_packer/: Cargo.toml
packer/texture_packer/examples/: packer-test.rs
packer/texture_packer/src/: lib.rs  rect.rs  texture_packer.rs
packer/texture_packer/src/exporter/: image_exporter.rs
packer/texture_packer/src/importer/: image_importer.rs
packer/texture_packer/src/packer/: mod.rs  skyline_packer.rs
packer/texture_packer/src/texture/: image_texture.rs  memory_rgba8_texture.rs  mod.rs  sub_texture.rs
physics/: Cargo.toml
physics/src/: lib.rs
physics_system/: Cargo.toml
physics_system/src/: lib.rs
rons/: desc.ron  macro_game.ron  sounds.ron  upgrades.ron  waves.ron
sound/: Cargo.toml
sound/src/: lib.rs
src/: components.rs  geometry.rs  gfx.rs  gfx_backend.rs  gui.rs  lib.rs  main.rs  physics.rs  run.rs  setup.rs  sound.rs  systems.rs  test.rs  types.rs
src/gfx/: animation.rs  effects.rs  mod.rs
src/systems/: ai.rs  collision.rs  common_respawn.rs  control.rs  deadscreen.rs  destroy_sync.rs  gameplay.rs  gui_system.rs  insert.rs  kinematic.rs  menu_rendering_system.rs  mod.rs  physics_system.rs  rendering.rs  score_table.rs  sound_system.rs  ui_controlling.rs  upgrade_control.rs  upgrade_ui.rs  upgrader.rs
telemetry/: Cargo.toml
telemetry/src/: lib.rs  main.rs  plot.rs  time_span.rs
