cargo-features = ["profile-overrides"]
[build]
incremental = true
[package]
name = "sdl-app"
version = "0.1.0"
authors = ["vlad"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os="android")'.dependencies]
android_log = "*"
log = "*"

[dependencies]
components = {path = "components"}
geometry = {path = "geometry"}
physics = {path = "physics"}
physics_system = {path = "physics_system"}
sound = {path = "sound"}
telemetry = {path = "telemetry"}
common = {path = "common"}
gfx_h = {path = "gfx_h"}
log = "0.4.8"
slog = "2.5.2"
slog-term = "2.4.1"
slog-async = "2.3.0"
slog-scope = "4.1.2"
slog-stdlog = "4.0.0"
flame = "0.2.2"
cfg-if = "*"
noise = "0.5.1"
backtrace = "0.3.32"
libc = "*"
image = "0.21.1"
specs = {version="0.14.3", features=["nightly"]}
specs-derive = "0.4.0"
nalgebra = "0.18.0"
nphysics2d = "0.11.1"
gl = "0.10.0"
shrev = "1.1.1"
ncollide2d = "0.19.1"
rand = "0.6.5"
hibitset = "0.5.0"
fnv = "1.0.6"
derive_deref = "1.1.0"
num_enum = "0.1.1"
red = {path = "red"}
glyph_brush = "0.5.3"
ron = "0.5.1"
serde = "1.0.97"
voronois = {path="voronois"}

[dependencies.sdl2]
version = "0.32.2"
default-features = false
features = ["image", "mixer"]

[profile.dev]
opt-level = 0
debug = true

[workspace]
exclude = ["physics_system"]
members = [
	"gfx_h", 
	"common", 
	"voronois", 
	"telemetry", 
	"geometry", 
	"components", 
	"sound", 
	"physics",
]

[profile.dev.overrides.gfx_h]
opt-level = 3

[profile.dev.overrides.common]
opt-level = 3

[profile.dev.overrides.voronoi]
opt-level = 3

[profile.dev.overrides.telemetry]
opt-level = 3

[profile.dev.overrides.components]
opt-level = 3

[profile.dev.overrides.geometry]
opt-level = 3

[profile.dev.overrides.sound]
opt-level = 3

[profile.dev.overrides.physics]
opt-level = 3

[profile.dev.overrides.physics_system]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.dev.overrides."*"]
opt-level = 3

[profile.dev.overrides.nphysics2d]
opt-level = 3
codegen-units = 16

[profile.release]
# lto = true
incremental = true
# codegen-units = 16