[package]
name = "astro_lib"
version = "0.1.0"
authors = ["vlad <vladzhukovtirko@gmail.com>"]
edition = "2018"
# publish = false

[dependencies]
specs = {version="0.14.3", features=["nightly"]}
specs-derive = "0.4.0"
nalgebra = "0.18.0"
nphysics2d = "0.11.1"
gl = "0.10.0"
shrev = "1.1.1"
glium = "0.24.0"
ncollide2d = "0.19.1"
rand = "0.6.5"
hibitset = "0.5.0"
fnv = "1.0.6"
derive_deref = "1.1.0"
num_enum = "0.1.1"

[dependencies.sdl2]
version = "0.32.2"
default-features = false
features = ["image", "mixer"]
