[package]
name = "physics"
version = "0.1.0"
authors = ["vlad <vladzhukovtirko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
specs = {version="0.14.3", features=["nightly"]}
specs-derive = "0.4.0"
nalgebra = "0.18.0"
nphysics2d = "0.11.1"
ncollide2d = "0.19.1"
rand = "0.6.5"
serde = "1.0.97"
fnv = "1.0.6"
derive_deref = "1.1.0"
