[package]
name = "physics_system"
version = "0.1.0"
authors = ["vlad <vladzhukovtirko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
slog = "2.5.2"
slog-term = "2.4.1"
slog-async = "2.3.0"
slog-scope = "4.1.2"
slog-stdlog = "4.0.0"
common = {path = "../common"}
components = {path = "../components"}
physics = {path = "../physics"}
specs = {version="0.14.3", features=["nightly"]}
specs-derive = "0.4.0"
nalgebra = "0.18.0"
nphysics2d = "0.11.1"
ncollide2d = "0.19.1"
rand = "0.6.5"
serde = "1.0.97"
fnv = "1.0.6"
derive_deref = "1.1.0"
flame = "0.2.2"
